--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </div>
         <nav class="nav">
           <a href="/" class="nav-link">Home</a>
+          <a href="support.html" class="nav-link">Support</a>
         </nav>
       </div>
     </header>
