--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
             This Privacy Policy describes how <strong>MySkin</strong> ("Company", "we", "our", or "us") collects, uses, and shares personal information when you use our mobile application and related services (collectively, the "Service").
           </p>
           <p>
-            Legal entity: <em>[Company Legal Name LLC]</em><br />
-            Address: <em>[Company Address]</em><br />
-            Contact: <a href="mailto:[support@myskin.app]">[support@myskin.app]</a>
+            Legal entity: <em>Purview LLC</em><br />
+            Address: <em>3181 Northwest Blvd, Columbus, OH 43211</em><br />
+            Contact: <a href="mailto:artstalkerhere@gmail.com">artstalkerhere@gmail.com</a>
           </p>
         </section>
 
@@ -191,7 +191,7 @@
             <li>Withdrawal of consent where processing is based on consent.</li>
             <li>Filing a complaint with your data protection authority.</li>
           </ul>
-          <p>To exercise rights, contact us at <a href="mailto:[support@myskin.app]">[support@myskin.app]</a>.</p>
+          <p>To exercise rights, contact us at <a href="mailto:artstalkerhere@gmail.com">artstalkerhere@gmail.com</a>.</p>
         </section>
 
         <section id="children" class="section">
@@ -207,9 +207,9 @@
         <section id="contact" class="section">
           <h2>12) Contact Us</h2>
           <address>
-            <strong>MySkin • [Company Legal Name LLC]</strong><br />
-            [Company Address]<br />
-            <a href="mailto:[support@myskin.app]">[support@myskin.app]</a>
+            <strong>MySkin • Purview LLC</strong><br />
+            3181 Northwest Blvd, Columbus, OH 43211<br />
+            <a href="mailto:artstalkerhere@gmail.com">artstalkerhere@gmail.com</a>
           </address>
         </section>
       </section>
@@ -720,7 +720,7 @@
     <script>
       (function(){
         // Initialize global dates in page header
-        window.MYSKIN_LEGAL && window.MYSKIN_LEGAL.initDates({ effective: '[2025-01-01]' });
+        window.MYSKIN_LEGAL && window.MYSKIN_LEGAL.initDates({ effective: '[2025-09-09]' });
 
         function scrollToSubsection(activePane){
           const raw = (location.hash || '').replace('#','');
